syntax="proto3";

service payloadExampleSerivce{
	rpc GetPayloadMessage(PayloadMessage) returns (PayloadMessage);
}

message PayloadMessage{
	string message = 1;
}